welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: ')' expected but 'if' found.
  if (Math.abs(a) < Math.abs(b)) {
  ^